<resources>
    <string name="app_name">common</string>

    <!-- 工作台界面str-->
    <string name="work_fin_order">完成订单</string>
    <string name="work_hour">时</string>
    <string name="work_minute">分</string>
    <string name="work_online_time">听单时长</string>
    <string name="work_today_income">今日收入</string>
    <string name="work_driver">司机</string>
    <string name="work_order">订单</string>
    <string name="work_online">开始听单</string>
    <string name="work_create">创建订单</string>
    <string name="work_offline">停止听单</string>
    <string name="work_listen_order">听单中...</string>
    <string name="work_title">工作台</string>

    <!-- 流水str-->
    <string name="liushui_baoxiao">报销</string>
    <string name="liushui_title">业务流水</string>
    <string name="liushui_baoxiao_sheheing">报销审核中</string>
    <string name="liushui_baoxiao_done">已报销</string>
    <string name="liushui_baoxiao_refuse">报销已拒绝</string>

    <string name="create_daijia">代驾</string>
    <string name="create_zhuanche">城内打车</string>
    <string name="create_taxi">出租车</string>
    <string name="create_paotui">跑腿</string>
    <string name="create_huoyun">货运</string>
    <string name="create_zhuanxian">城际专线</string>
    <string name="create_chartered">定制包车</string>
    <string name="create_rental">包车租车</string>
    <string name="create_bus_country">客运班车</string>
    <string name="create_custombus">定制班车</string>
    <string name="create_carpool">城际拼车</string>
    <string name="create_gov">公务用车</string>

    <string name="hint">提示</string>
    <string name="sure">确定</string>
    <string name="message">亲爱的司机师傅，我们需要获取以下权限来保证应用正常运行，请授予</string>

    <string name="exit">未能获得必要应用权限，即将退出</string>

    <string name="liushui_today">今天</string>
    <string name="liushui_yesterday">昨天</string>
    <string name="liushui_this_week">本周</string>
    <string name="liushui_this_month">本月</string>
    <string name="liushui_this_year">本年</string>
    <string name="liushui_all">全部</string>

    <string name="new_ann">新公告：</string>
    <string name="new_notify">新通知：</string>

    <string name="start_lis_order">开始听单啦！</string>
    <string name="stop_lis_order">停止听单啦！</string>

    <string name="current_place">当前地址:</string>

    <string name="grab_order_content">抢单</string>
    <string name="send_order">派单</string>
    <string name="accept_order">接单</string>
    <string name="accept_order_refuse">拒单</string>
    <string name="send_order_content">您有新的订单了，快去接单吧</string>

    <string name="cancel_order">消单</string>
    <string name="you_have_order_cancel">您有订单被取消，请注意查看</string>

    <string name="back_order">订单收回</string>
    <string name="you_have_order_back">您有订单被收回，请注意查看</string>

    <string name="force_offline">您已被管理员强制下线</string>

    <!-- 抢单界面str -->
    <string name="grab_dis">距您约</string>
    <string name="grab_map">地图</string>
    <string name="grab_order">抢单</string>
    <string name="sec">秒</string>

    <string name="from">从</string>
    <string name="out">出发</string>
    <string name="to">到</string>
    <string name="order">订单</string>
    <string name="to_you">距您</string>

    <string name="meter">米</string>
    <string name="k_meter">千米</string>

    <string name="jishi_order">即时订单</string>
    <string name="yuyue_order">预约订单</string>
    <string name="time_format">MM月dd日 HH:mm</string>

    <string name="time_five_format">yyyy-MM-dd HH:mm</string>


    <string name="baoxiao_hint_1">请输入报销金额</string>
    <string name="baoxiao_hint_2"> 请输入报销原因(不能超过100个字符)</string>

    <string name="baoxiao_apply">提交</string>
    <string name="baoxiao_suc">您的报销请求已提交，等待审核</string>

    <string name="jump_gif">跳过</string>

    <string name="please_admin">您的账户已被冻结，请联系管理员</string>
    <string name="force_offline_please_admin">您已被强制下线，请联系管理员</string>

    <string name="baoxiao_shenhe">当前订单报销申请已经提交，正在审核中</string>
    <string name="baoxiao_done">当前订单已经报销过</string>

    <string name="no_order">暂无订单，赶快去接单吧</string>
    <string name="no_ann_and_notice">暂无通知和公告</string>
    <string name="no_work">空闲中,快上线接单吧</string>

    <string name="freezed">您的账户已被冻结，请联系管理员</string>
    <string name="unbunding">您的账户已被管理员解绑</string>

    <string name="pay_suc_1">手机尾号为</string>
    <string name="pay_suc_2">的客户已完成支付</string>

    <string name="yuyue">预约</string>
    <string name="jishi">及时</string>

    <string name="new_order">新单 ></string>
    <string name="pai_order">已派单 ></string>
    <string name="jie_order">已接单 ></string>
    <string name="to_start_order">前往预约地 ></string>
    <string name="arrive_start_order">到达预约地 ></string>
    <string name="to_end_order">前往目的地 ></string>
    <string name="wait_order">等待中 ></string>
    <string name="not_pay_order">未支付 ></string>
    <string name="finish_order">已完成</string>
    <string name="des_order">已销单 ></string>
    <string name="rate_order">已完成</string>

    <string name="zx_new_order">新单</string>
    <string name="zx_pai_order">已派单</string>
    <string name="zx_accept_order">已接单</string>
    <string name="zx_wait_start">等待开始行程</string>
    <string name="zx_accept_plan">接人规划</string>
    <string name="zx_send_plan">送人规划</string>
    <string name="zx_accepting">接人中</string>
    <string name="zx_sending">送人中</string>
    <string name="zx_send_over">送完客户</string>
    <string name="zx_line_over">行程结束</string>

    <string name="zx_no_pay">未支付</string>
    <string name="zx_pay">已支付</string>
    <string name="zx_accpet">接人中</string>
    <string name="zx_running">已出发</string>
    <string name="zx_skip">已跳过</string>
    <string name="zx_arrive">已到达</string>
    <string name="zx_evaluate">已评价</string>
    <string name="zx_back">已退票</string>

    <string name="reject_net">网络连接不可用，可能是由于您主动设置了禁用网络，请前往应用管理中打开。设置完毕后请重新启动程序</string>

    <string name="date_unit">MM月dd日 HH:mm</string>

    <string name="home_gonggao">公告</string>
    <string name="home_notice">通知</string>
    <string name="listen_order_set">模式设置</string>
    <string name="listen_order_set_2">听单设置</string>
    <string name="listen_order_more_one">至少选择一种听单业务</string>

    <string name="com_perfect_info">亲爱的师傅您好：\n&#160;&#160;&#160;&#160;您的资料还未完善，请尽快完善提交资料，管理员审核通过之后您就可以开启接单旅程了。</string>
    <string name="com_perfect">完善资料</string>
    <string name="com_perfect2">信息完善</string>
    <string name="com_head_img">头像</string>
    <string name="com_name">*姓名</string>
    <string name="com_input_name">请输入您的真实姓名</string>
    <string name="com_phone">*手机号</string>
    <string name="com_input_phone">请输入手机号</string>
    <string name="com_card">*身份证号</string>
    <string name="com_input_card">请输入身份证号</string>
    <string name="com_contacts">*紧急联系人</string>
    <string name="com_input_contacts">请输入紧急联系人姓名</string>
    <string name="com_contacts_phone">*紧急联系人电话</string>
    <string name="com_input_contacts_phone">请输入紧急联系人电话</string>
    <string name="com_introducer">推荐服务人员电话</string>
    <string name="com_input_introducer">请输入推荐服务人员电话</string>
    <string name="com_company">注册公司</string>
    <string name="com_type">注册业务</string>
    <string name="com_daijia">代驾</string>
    <string name="com_zhuanche">专车</string>
    <string name="com_car">有车注册</string>
    <string name="com_no_car">无车注册</string>
    <string name="com_next">下一步</string>
    <string name="com_car_photo">上传车辆45度角照片</string>
    <string name="com_car_no">*车牌号</string>
    <string name="com_input_car_no">请输入您的车牌号</string>
    <string name="com_car_name">*车辆厂牌</string>
    <string name="com_car_model">*车辆型号</string>
    <string name="com_car_license_color">*车牌颜色</string>
    <string name="com_car_color">*车身颜色</string>
    <string name="com_car_type">*车辆类型</string>
    <string name="com_car_use">*车辆性质</string>
    <string name="com_oil">*燃料类型</string>
    <string name="com_seat">*核定载人数（人）</string>
    <string name="com_input_seat">请输入核定载客人数</string>
    <string name="com_km">*车辆已行驶公里（KM）</string>
    <string name="com_input_km">请输入车辆已行驶公里数</string>
    <string name="com_car_vin">*车辆识别VIN</string>
    <string name="com_input_car_vin">请输入17位车辆识别VIN</string>
    <string name="com_buy_date">*购车日期</string>
    <string name="com_input_buy_date">请选择购车日期</string>
    <string name="com_register_date">*车辆注册日期</string>
    <string name="com_input_register_date">请选择车辆注册日期</string>
    <string name="com_check_date">*车辆年检日期</string>
    <string name="com_input_check_date">请选择车辆年检日期</string>
    <string name="com_pic_info">图片信息</string>
    <string name="com_car_license">行驶证（必填）</string>
    <string name="com_transportation_license">运输证</string>
    <string name="com_commit">提交审核</string>
    <string name="com_look_pic">查看示例图片</string>
    <string name="com_card1">身份证正面（必填）</string>
    <string name="com_card2">身份证反面（必填）</string>
    <string name="com_license">驾驶证（必填）</string>
    <string name="com_full">手持身份证照片</string>
    <string name="com_complete_info">亲爱的师傅您好：\n&#160;&#160;&#160;&#160;您的资料已提交成功，管理人员正在审核，如有疑问请及时联后台管理人员，审核通过后您可开启接单旅程了。</string>


    <!--hf 我的订单相关-->
    <string name="com_my_order">我的订单</string>
    <string name="com_make_order">司机补单</string>
    <string name="com_accept_order">我接的单</string>
    <string name="com_assign_order">指派订单</string>
    <string name="com_grab_order">可抢订单</string>

    <string name="empty_text"></string>
    <string name="com_no_read">全部都已读了哦</string>

    <string name="com_order_type">类型</string>
    <string name="com_order_line">线路</string>
    <string name="com_order_service_time">服务时段</string>

    <string name="com_order_name">姓名</string>
    <string name="com_order_number">乘车人数</string>
    <string name="com_order_start">上车地址</string>
    <string name="com_order_end">下车地址</string>
    <string name="com_order_remark">备注</string>
    <string name="com_order_call_me">联系客服</string>

    <string name="com_turn_order">转单</string>

    <!--支付dialog-->
    <string name="com_pay_wechat">微信</string>
    <string name="com_pay_zfb">支付宝</string>
    <string name="com_pay_balance">余额</string>

    <string name="com_alipay_success">支付宝支付成功</string>
    <string name="com_alipay_failed">支付宝支付失败</string>

</resources>
