<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <View style="@style/RegisterLine" />

        <FrameLayout
            style="@style/Register"
            android:layout_height="60dp">

            <TextView
                style="@style/RegisterStart"
                android:text="@string/com_car_photo" />

            <ImageView
                android:id="@+id/imvCar"
                style="@style/RegisterEnd"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|right"
                android:src="@mipmap/com_head_up" />

        </FrameLayout>


        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleEtCarNo"
                style="@style/RegisterStart"
                android:text="@string/com_car_no" />

            <EditText
                android:id="@+id/etCarNo"
                style="@style/RegisterEnd"
                android:hint="@string/com_input_car_no"
                android:maxLength="11"
                android:inputType="text" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleBrand"
                style="@style/RegisterStart"
                android:text="@string/com_car_name" />

            <TextView
                android:id="@+id/tvBrand"
                style="@style/RegisterEnd"
                android:layout_width="200dp"
                android:drawableEnd="@mipmap/com_right_arrow"
                android:drawablePadding="4dp"
                tools:text="XXXXX" />

        </FrameLayout>


        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleVehicle"
                style="@style/RegisterStart"
                android:text="@string/com_car_model" />

            <TextView
                android:id="@+id/tvVehicle"
                style="@style/RegisterEnd"
                android:layout_width="200dp"
                android:drawableEnd="@mipmap/com_right_arrow"
                android:drawablePadding="4dp"
                tools:text="XX" />

        </FrameLayout>


        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/TitleColor"
                style="@style/RegisterStart"
                android:text="@string/com_car_license_color" />

            <TextView
                android:id="@+id/tvColor"
                style="@style/RegisterEnd"
                android:layout_width="200dp"
                android:drawableEnd="@mipmap/com_right_arrow"
                android:drawablePadding="4dp"
                tools:text="XX" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleCarColor"
                style="@style/RegisterStart"
                android:text="@string/com_car_color" />

            <TextView
                android:id="@+id/tvCarColor"
                style="@style/RegisterEnd"
                android:layout_width="200dp"
                android:drawableEnd="@mipmap/com_right_arrow"
                android:drawablePadding="4dp"
                tools:text="XX" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleCarType"
                style="@style/RegisterStart"
                android:text="@string/com_car_type" />

            <TextView
                android:id="@+id/tvCarType"
                style="@style/RegisterEnd"
                android:layout_width="200dp"
                android:drawableEnd="@mipmap/com_right_arrow"
                android:drawablePadding="4dp"
                tools:text="XX" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleCarUse"
                style="@style/RegisterStart"
                android:text="@string/com_car_use" />

            <TextView
                android:id="@+id/tvCarUse"
                style="@style/RegisterEnd"
                android:layout_width="200dp"
                android:drawableEnd="@mipmap/com_right_arrow"
                android:drawablePadding="4dp"
                tools:text="XX" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleOil"
                style="@style/RegisterStart"
                android:text="@string/com_oil" />

            <TextView
                android:id="@+id/tvOil"
                style="@style/RegisterEnd"
                android:layout_width="200dp"
                android:drawableEnd="@mipmap/com_right_arrow"
                android:drawablePadding="4dp"
                tools:text="XX" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleNum"
                style="@style/RegisterStart"
                android:text="@string/com_seat" />

            <EditText
                android:id="@+id/seatNum"
                style="@style/RegisterEnd"
                android:maxLength="3"
                android:digits="1234567890"
                android:hint="@string/com_input_seat"
                android:inputType="number" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleMK"
                style="@style/RegisterStart"
                android:text="@string/com_km" />

            <EditText
                android:id="@+id/mk"
                style="@style/RegisterEnd"
                android:maxLength="7"
                android:digits="1234567890."
                android:hint="@string/com_input_km"
                android:inputType="numberDecimal" />

        </FrameLayout>


        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleVIN"
                style="@style/RegisterStart"
                android:text="@string/com_car_vin" />

            <EditText
                android:id="@+id/etVin"
                android:maxLength="17"
                style="@style/RegisterEnd"
                android:hint="@string/com_input_car_vin"
                android:inputType="none" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleBuy"
                style="@style/RegisterStart"
                android:text="@string/com_buy_date" />

            <TextView
                android:id="@+id/tvBuy"
                style="@style/RegisterEnd"
                android:hint="@string/com_input_buy_date" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleRegister"
                style="@style/RegisterStart"
                android:text="@string/com_register_date" />

            <TextView
                android:id="@+id/tvRegister"
                style="@style/RegisterEnd"
                android:hint="@string/com_input_register_date" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <FrameLayout style="@style/Register">

            <TextView
                android:id="@+id/titleCheck"
                style="@style/RegisterStart"
                android:text="@string/com_check_date" />

            <TextView
                android:id="@+id/tvCheck"
                style="@style/RegisterEnd"
                android:hint="@string/com_input_check_date" />

        </FrameLayout>

        <View style="@style/RegisterLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#f7f7f7"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/com_pic_info"
            android:textColor="#999999"
            android:textSize="14dp" />

        <View style="@style/RegisterLine" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/com_car_license"
            android:textColor="#333333"
            android:textSize="14dp" />

        <com.easymi.common.register.RatioImageView
            android:id="@+id/car_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/com_pic_bg"
            app:ratio="2.5" />

        <TextView
            android:id="@+id/com_car_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/com_look_pic"
            android:textColor="#999999"
            android:textSize="12dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/com_transportation_license"
            android:textColor="#333333"
            android:textSize="14dp" />

        <com.easymi.common.register.RatioImageView
            android:id="@+id/imvTrans"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/com_pic_bg"
            app:ratio="1.5" />

        <TextView
            android:id="@+id/com_transportation_license"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/com_look_pic"
            android:textColor="#999999"
            android:textSize="12dp" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/com_corners_blue"
            android:text="@string/com_commit"
            android:textColor="#fff"
            android:textSize="18dp" />


    </LinearLayout>

</ScrollView>